WIP for cmake auto deps: + probably does not yet work; + the idea is to move each component's dependencies into the initial declaration, and then the ENABLE variable can be used to refer to the whole dependency list & other related info; + a major issue is that not all of the Find* files either use FindPackageHandleStandardArgs or use cache settings for ENABLE variables, which means that those variables either do not exist (at all) or are just temporary in the current directory / context (which may or not work across a whole project); + this work will eventually allow a single dependency declaration, which is then used for linking dependencies for libraries, tests, applications, and so forth; + the dependency list will be recursive, so specifying GNU Radio Runtime will automatically bring in GNU Radio PMT, Volk, and Boost; + the dependency list should then be just the immediate dependencies, so if GNU Radio PMT is not directly used, it should not be in the list even though it will eventually be brought in as an indirect dependency for linking purposes.

--- a/gnuradio-runtime/python/gnuradio/ctrlport/CMakeLists.txt
+++ b/gnuradio-runtime/python/gnuradio/ctrlport/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2012 Free Software Foundation, Inc.
+# Copyright 2012,2015 Free Software Foundation, Inc.
 #
 # This file is part of GNU Radio
 #
@@ -18,6 +18,8 @@
 # Boston, MA 02110-1301, USA.
 
 ########################################################################
+if(ENABLE_GR_CTRLPORT)
+
 include(GrPython)
 
 install(
@@ -26,7 +28,6 @@ install(
     DESTINATION ${GR_PYTHON_DIR}/gnuradio/ctrlport
     COMPONENT "runtime_python"
 )
-
 
 GR_PYTHON_INSTALL(
     FILES
@@ -77,3 +78,5 @@ GR_PYTHON_INSTALL(
 )
 
 endif(THRIFT_FOUND)
+
+endif(ENABLE_GR_CTRLPORT)
