--- a/gnuradio-runtime/CMakeLists.txt
+++ b/gnuradio-runtime/CMakeLists.txt
@@ -33,7 +33,13 @@ GR_CHECK_LINUX_SCHED_AVAIL()
 # Register component
 ########################################################################
 include(GrComponent)
+
+GR_REGISTER_COMPONENT("gnuradio-pmt" ENABLE_GNURADIO_PMT
+    Boost_FOUND
+)
+
 GR_REGISTER_COMPONENT("gnuradio-runtime" ENABLE_GNURADIO_RUNTIME
+    ENABLE_GNURADIO_PMT
     Boost_FOUND
     ENABLE_VOLK
     PYTHONINTERP_FOUND
@@ -78,6 +84,7 @@ GR_REGISTER_COMPONENT("gr-ctrlport" ENABLE_GR_CTRLPORT
   SWIG_VERSION_CHECK
   ENABLE_GNURADIO_RUNTIME
 )
+message(STATUS "")
 
 ########################################################################
 # Begin conditional configuration
@@ -122,6 +129,7 @@ CPACK_COMPONENT("runtime_swig"
     DESCRIPTION  "SWIG development .i files"
     DEPENDS      "runtime_swig;runtime_python;runtime_devel"
 )
+
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/gnuradio-runtime.conf.in
     ${CMAKE_CURRENT_BINARY_DIR}/gnuradio-runtime.conf
